<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recyclops.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transaksi"
        android:name="com.example.recyclops.ui.dashboard.TransaksiFragment"
        android:label="@string/transaksi"
        tools:layout="@layout/fragment_transaksi" />

    <fragment
        android:id="@+id/navigation_poin"
        android:name="com.example.recyclops.ui.notifications.PoinFragment"
        android:label="@string/poin"
        tools:layout="@layout/fragment_poin" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.recyclops.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>