<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.ImageConfirmationActivity">

    <ImageView
        android:id="@+id/iv_trash_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/foto_sampah" />

    <ImageView
        android:id="@+id/btn_cancel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="64dp"
        android:src="@drawable/ic_baseline_remove_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/batal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batal"
        app:layout_constraintEnd_toEndOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel" />

    <ImageView
        android:id="@+id/btn_confirm"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/konfirmasi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/konfirmasi"
        app:layout_constraintEnd_toEndOf="@+id/btn_confirm"
        app:layout_constraintStart_toStartOf="@+id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>